# fastapi-production-starter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py
app/middleware/: cors.py
app/models/: user.py
app/routers/: auth.py  users.py
app/schemas/: __init__.py  user.py
app/services/: auth.py
tests/: conftest.py  test_auth.py  test_users.py
